[gd_scene load_steps=7 format=2]

[ext_resource path="res://furniture/doors/door_handle-basic.tscn" type="PackedScene" id=1]
[ext_resource path="res://furniture/doors/door.gd" type="Script" id=2]
[ext_resource path="res://house/wood_siding.jpg" type="Texture" id=3]
[ext_resource path="res://house/wood_siding_vertical.jpg" type="Texture" id=4]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.266667, 0.188235, 0.188235, 1 )
albedo_texture = ExtResource( 4 )

[node name="door" type="Spatial"]
script = ExtResource( 2 )

[node name="hinge" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0487944, 1.07, -0.00336409 )
use_collision = true
width = 0.06
height = 2.14
depth = 0.1
material = SubResource( 2 )

[node name="main_mesh" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.63, 1.07, 0 )
use_collision = true
collision_layer = 129
width = 1.14
height = 2.14
depth = 0.1
material = SubResource( 1 )

[node name="door_handle_1" parent="main_mesh" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.401144, -0.204199, 0.0818378 )
collision_layer = 129

[node name="door_handle_2" parent="main_mesh" instance=ExtResource( 1 )]
transform = Transform( 1, 1.19209e-07, 8.74228e-08, 1.19209e-07, -1, 7.10543e-15, 8.74228e-08, 0, -1, 0.401144, -0.204199, -0.0811689 )
collision_layer = 129

[node name="open_position" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.07, -0.63 )

[node name="closed_position" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.63, 1.07, 0 )
